<resources>
    <string name="app_name">Blood Share (10116517)</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="login">Login</string>
    <string name="regis">Register</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="organization">Organization</string>
    <string name="home_address">Home Address</string>
    <string name="default_location">Default Location</string>
    <string name="almost_there">Almost There</string>
    <string name="thank_you">Thank you for registering with us. One more \n step, you need to check your email \nto activate your account</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="verify">Verify</string>
    <string name="verify_below">We have send verification code to your email</string>
    <string name="code">enter verification code here...</string>
    <string name="send">SEND</string>
    <string name="doesn_t_have_account">doesn\'t have account ?</string>
    <string name="register">Register</string>
    <string name="doesn_t_get_the_code">doesn\'t get the code?</string>
    <string name="resend">Resend</string>
    <string name="name">Naufal Zayn Mardhotillah</string>
    <string name="blood">Blood Type : O</string>
    <string name="give">75</string>
    <string name="blood_give">BLOOD GIVE</string>
    <string name="received">100</string>
    <string name="blood_received">BLOOD RECEIVED</string>
    <string name="greet">330</string>
    <string name="thanks">THANKS</string>
    <string name="search_donor">Search Donor</string>
    <string name="keterangan_search">Search donor near you</string>
    <string name="blood_needed">Blood Needed</string>
    <string name="keterangan_need">7 Users need blood</string>
    <string name="message">Message</string>
    <string name="keterangan_message">2 New Messages</string>
    <string name="donor_history">Donor History</string>
    <string name="keterangan_history">2 Gives, 1 Received</string>
    <string name="terms">Agree with Terms and Conditions</string>
    <string name="register_caps">REGISTER</string>
</resources>
