<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblue"
    tools:context=".VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/background"
            android:textSize="35sp"
            android:layout_marginTop="150dp"
            android:text="@string/verify_your_account"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/background"
            android:layout_marginTop="10dp"
            android:text="@string/verify_below"/>

        <EditText
            android:id="@+id/ed_VerifCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/code"
            android:gravity="center"
            android:backgroundTint="@color/background"
            android:textColorHint="@color/background"/>
        <Button
            android:id="@+id/btn_Send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send"
            android:textColor="@color/background"
            android:background="@drawable/transparent_button"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/doesn_t_get_the_code"
                android:textColor="@color/background" />

            <TextView
                android:id="@+id/btn_Resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="@string/resend"
                android:textColor="@color/background"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>